--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/webdevelopertony/webdevelopertony.github.io#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jquery": "^3.2.1"
   },
   "devDependencies": {
