--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^6.0.6",
     "serve": "^6.0.2",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.2.0",
     "webpack-dev-server": "^2.5.1"
   }
