--- a/package.json
+++ b/package.json
@@ -20,24 +20,19 @@
   },
   "homepage": "https://github.com/iamtonysoft/iamtonysoft.github.io#readme",
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "uikit": "^3.0.0-beta.27"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "serve": "^6.0.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.2.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^3.4.1"
   }
 }
