--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   "homepage": "https://github.com/iamtonysoft/iamtonysoft.github.io#readme",
   "dependencies": {
     "jquery": "^3.5.0",
-    "uikit": "^3.0.0-beta.27"
+    "uikit": "^3.4.6"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^3.5.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.4.1"
+    "url-loader": "^4.1.0",
+    "webpack": "^3.12.0"
   }
 }
